<resources>
    <string name="app_name">PBR</string>
    <string name="main_menu">Main Menu</string>
    <string name="PhotoBioReactor">Photobioreactor Controls</string>


    <string name="controls">Main Menu Controls</string>
    <string name="spirulina_info">Spirulina Information</string>
    <string name="devices">Device Information</string>

    <string name="connection_error">There has been a connection issue...</string>

    <string name="btn_apply">Apply Changes</string>

    <string name="approx_yield">Approximate Yield:</string>
    <string name="progress_bar_water_temp">Water Temperature: </string>
<<<<<<< HEAD
    <string name="fahrenheit">    C</string>
=======
>>>>>>> 2f3a5adea85385ceb308f6494b8a33d5d01f5b16
    <string name="photoresistor_toggle">On/Off Photoresistor Switch:</string>
    <string name="light_intensity_txt">Light Intensity: </string>
    <string name="light_intensity_value">0%</string>
    <string name="light_cycle">Amount of Light Per Day: </string>
    <string name="start_time">Light Cycle Start Time: </string>
    <string-array name="time_of_day_hour">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="time_of_day_min">
        <item>1</item> <item>2</item> <item>3</item> <item>4</item> <item>5</item> <item>6</item> <item>7</item> <item>8</item> <item>9</item> <item>10</item>
        <item>11</item> <item>12</item> <item>13</item> <item>14</item> <item>15</item> <item>16</item> <item>17</item> <item>18</item> <item>19</item> <item>20</item>
        <item>21</item> <item>22</item> <item>23</item> <item>24</item> <item>25</item> <item>26</item> <item>27</item> <item>28</item> <item>29</item> <item>30</item>
        <item>31</item> <item>32</item> <item>33</item> <item>34</item> <item>35</item> <item>36</item> <item>37</item> <item>38</item> <item>39</item> <item>40</item>
        <item>41</item> <item>42</item> <item>43</item> <item>44</item> <item>45</item> <item>46</item> <item>47</item> <item>48</item> <item>49</item> <item>50</item>
        <item>51</item> <item>52</item> <item>53</item> <item>54</item> <item>55</item> <item>56</item> <item>57</item> <item>58</item> <item>59</item> <item>60</item>
    </string-array>
    <string-array name="a.m_p.m">
        <item>a.m.</item>
        <item>p.m.</item>
    </string-array>
</resources>