<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainControlActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="clip_vertical|start"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-38dp"
        tools:layout_editor_absoluteY="114dp">

        <TextView
            android:id="@+id/txtTitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/PhotoBioReactor"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txtYield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/approx_yield" />

        <com.example.pbr.YieldView
            android:id="@+id/custView"
            android:layout_width="fill_parent"
            android:layout_height="184dp"
            android:layout_margin="5dp"
            custom:circleColor="#0AFA02"
            custom:circleLabel="0%"
            custom:labelColor="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTemp"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/progress_bar_water_temp" />

            <TextView
                android:id="@+id/tempDigitalOutput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="120"
            android:progress="88"
            android:scrollbarSize="20dp" /><!-- set 120 maximum value for the progress -->/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtPRSwitch"
                android:layout_width="243dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/photoresistor_toggle" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip4"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lightIntensity"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/light_intensity_txt" />

            <TextView
                android:id="@+id/lightIntensityOutput"
                android:layout_width="9dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/light_intensity_value" />

        </LinearLayout>

        <SeekBar
            android:id="@+id/light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lightCycle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/light_cycle" />

            <TextView
                android:id="@+id/txtAmountLightHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/startTime"
                android:layout_width="235dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/start_time" />

            <Spinner
                android:id="@+id/spinHour"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/time_of_day_hour" />

            <Spinner
                android:id="@+id/spinMin"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/time_of_day_min" />

            <Spinner
                android:id="@+id/spinHalf"
                android:layout_width="36dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/a.m_p.m" />
        </LinearLayout>

        <Button
            android:id="@+id/btnApply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_apply" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/data"
                    android:layout_width="match_parent"
                    android:layout_height="949dp"
                    android:text="TextView" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>